# ros2-vtem-control

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup_py.py
examples/: matlab.m
include/vtem_control/: VtemControl.h  VtemControl.hpp
launch/: vtem_control_launch.py
msg/: InputPressures.msg
scripts/: python_pub.py  python_pub_node.py  valve_test.cpp
src/: VtemControl.cpp  input_pressures_sub_node.cpp  output_pressures_pub_node.cpp  pressure_regulator_node.cpp  pressure_regulator_sub_node.cpp
test/: valve_test.cpp
vtem_control_cpp/: CMakeLists.txt  package.xml  setup.cfg
vtem_control_cpp/cmake/: FindModbus.cmake
vtem_control_cpp/include/vtem_control_cpp/: VtemControl.hpp
vtem_control_cpp/launch/: vtem_control.launch.py  vtem_control_launch.py  vtem_control_launch_pub.py  vtem_control_launch_sub.py
vtem_control_cpp/scripts/: valve_test.cpp
vtem_control_cpp/src/: VtemControl.cpp  input_pressures_sub_node.cpp  output_pressures_pub_node.cpp
vtem_control_mat/: VtemControl.m
vtem_control_matlab/: FluidPressures_msg_to_array.m  VtemControl.m  array_to_FluidPressures_msg.m  bit2dec.m  emergency_stop.m  init.m  input_pressures_pub_node.m  input_pressures_sub_node.m  output_pressures_pub_node.m  startup.m  valve_test.m  valve_test_trajectories  valve_trajectories_smooth  valve_trajectories_smooth.m
vtem_control_msgs/: CMakeLists.txt  package.xml
