<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2-vtem-control</name>
  <version>0.0.0</version>
  <description>ROS2 package for the control of the Festo VTEM motion terminal</description>
  <maintainer email="maximilian@stoelzle.ch">root</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>libboost-all-dev</build_depend>
  <build_depend>libeigen3-dev</build_depend>
  <build_depend>libmodbus-dev</build_depend>

  <exec_depend>libboost-all-dev</exec_depend>
  <exec_depend>libeigen3-dev</exec_depend>
  <exec_depend>libmodbus-dev</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
